--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,29 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
+<header>
+    <nav>
+        <ul>
+            <li class="left"><a href="#analytica">ANALYTICA</a></li>
+            <li class="right"><a href="#aboutus">About us</a></li>
+            <li class="right"><a href="#strategy">Strategy</a></li>
+            <li class="right"><a href="#prices">Prices</a></li>
+            <li class="right"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div class="titles">
         <h1>All Your Business Data in One Place</h1>
         <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
     </div>
+
+    <div class="red-boxes">
+        <p class="box-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium est hic, id illo laudantium quos. Consectetur eius in, inventore ipsam, modi necessitatibus nostrum officiis quasi quisquam sapiente velit veniam vitae?</p>
+        <p class="box-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium est hic, id illo laudantium quos. Consectetur eius in, inventore ipsam, modi necessitatibus nostrum officiis quasi quisquam sapiente velit veniam vitae?</p>
+        <p class="box-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium est hic, id illo laudantium quos. Consectetur eius in, inventore ipsam, modi necessitatibus nostrum officiis quasi quisquam sapiente velit veniam vitae?</p>
+    </div>
+</main>
 </body>
 </html>
